[build-system]
requires = [
  "hatch-vcs",
  "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "cutetext"
authors = [
  { name="Niranjan B", email="niranjannb7777@gmail.com" },
]
description = "Package to convert text to fanct text types"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = [
  "version",
]

[project.urls]
"Homepage" = "https://github.com/niranjanneeru/cute-text"
"Bug Tracker" = "https://github.com/niranjanneeru/cute-text/issues"
Source = "https://github.com/niranjanneeru/cute-text"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
]

[tool.hatch]
version.source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.isort]
profile = "black"
