[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cutetext"
version = "0.0.2"
authors = [
  { name="Niranjan B", email="niranjannb7777@gmail.com" },
]
description = "Package to convert text to fanct text types"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/niranjanneeru/cute-text"
"Bug Tracker" = "https://github.com/niranjanneeru/cute-text/issues"
Source = "https://github.com/niranjanneeru/cute-text"

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
]
